Add support for git worktrees

This patch adds support for the git worktree feature
(see https://git-scm.com/docs/git-worktree).
In a worktree, there is no .git/ folder, rather a .git
file which contains a path to the corresponding worktree
within the .git folder of the repository.

Differential Revision: https://phabricator.kde.org/D5014
BUG:375849