plugins/git/gitplugin.cpp
@@ -276,7 +276,24 @@ QUrl GitPlugin::repositoryRoot(const QUrl& path)
 bool GitPlugin::isValidDirectory(const QUrl & dirPath)
 {
     QDir dir=dotGitDirectory(dirPath);
-
+    QFile dotGitPotentialFile(dir.filePath(".git"));
+    // if .git is a file, we may be in a git worktree
+    QFileInfo dotGitPotentialFileInfo(dotGitPotentialFile);
+    if (!dotGitPotentialFileInfo.isDir() && dotGitPotentialFile.exists()) {
+        QString gitWorktreeFileContent;
+        if (dotGitPotentialFile.open(QFile::ReadOnly)) {
+            // the content should be gitdir: /path/to/the/.git/worktree
+            gitWorktreeFileContent = QString::fromUtf8(dotGitPotentialFile.readAll());
+            dotGitPotentialFile.close();
+        } else {
+            return false;
+        }
+        const auto items = gitWorktreeFileContent.split(' ');
+        if (items.size() == 2 && items.at(0) == "gitdir:") {
+            qCDebug(PLUGIN_GIT) << "we are in a git worktree" << items.at(1);
+            return true;
+        }
+    }
     return dir.exists(QStringLiteral(".git/HEAD"));
 }
 
